--- a/index.html
+++ b/index.html
@@ -266,6 +266,62 @@
         </div>
       </div>
 
+      <div class="skills container">
+
+        <div class="section-title">
+          <h2>Linguagens Utilizadas</h2>
+        </div>
+      
+        <div class="row skills-content">
+  
+          <div class="col-lg-6">
+  
+            <div class="progress">
+              <span class="skill">Java<i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">HTML <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+  
+            <div class="progress">
+              <span class="skill">Python<i class="val">30%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+  
+          </div>
+  
+          <div class="col-lg-6">
+  
+            <div class="progress">
+              <span class="skill">CSS<i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+  
+            <div class="progress">
+              <span class="skill">JavasCript<i class="val">30</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+  
+           
+          </div>
+  
+        </div>
+  
+      </div>
+
     </div>
   </section><!-- End Resume Section -->
 
@@ -382,20 +438,7 @@
             <input type="text" name="PlacaGrafica" class="form-control" id="PlacaGrafica" placeholder="PlacaGrafica" required>
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="text" class="form-control" name="SistemaOperativo" id="SistemaOperativo" placeholder="SistemaOperativo" required>
-          </div>
-        </div>
-
-        <div class="form-group mt-3">
-          <input type="hidden">
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 form-group">
-            <input type="text" name="Peso" class="form-control" id="Peso" placeholder="Peso" required>
-          </div>
-          <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="text" class="form-control" name="Observacao" id="Observacao" placeholder="Observação">
+            <input type="text" class="form-control" name="Observacao" id="Observacao" placeholder="Observação" required>
           </div>
         </div>
 
