--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
           <div class="col-md-6 form-group">
             <input type="text" name="Marca" class="form-control" id="Marca" placeholder="Marca" required>
           </div>
-          <div class="col-md-6 form-group">
+          <div class="col-md-6 form-group mt-3 mt-md-0">
             <input type="text" name="Modelo" class="form-control" id="Modelo" placeholder="Modelo" required>
           </div>
         </div>
