--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
 
     </div><!-- End About Me -->
-
+  </section><!-- End About Me Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
